tests/query_errors/subquery_unknown_port/error.txt
Error: 
    9 | select event from passthrough/snot into out;
      |                   ^^^^^^^^^^^ Subquery `passthrough` does not have port `snot`
